--- a/firebaseTest/Base.lproj/Main.storyboard
+++ b/firebaseTest/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="firebaseTest" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HomeView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="ViewController" customModule="firebaseTest" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -93,6 +93,53 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="212" y="305"/>
+        </scene>
+        <!--After Login View Controller-->
+        <scene sceneID="kwC-Ju-oPY">
+            <objects>
+                <viewController storyboardIdentifier="AfterLoginView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="S3D-xN-vnc" customClass="AfterLoginViewController" customModule="firebaseTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="LZw-1z-cHR"/>
+                        <viewControllerLayoutGuide type="bottom" id="hrk-oZ-cS8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="UrV-9S-E1I">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HomeView" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zcT-kF-Oik">
+                                <rect key="frame" x="259" y="20" width="82" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="82" id="GU4-PL-fed"/>
+                                    <constraint firstAttribute="height" constant="21" id="LlP-27-O02"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XF1-fw-d2b">
+                                <rect key="frame" x="533" y="20" width="48" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="TMk-nR-T1s"/>
+                                    <constraint firstAttribute="width" constant="48" id="erU-VN-pux"/>
+                                </constraints>
+                                <state key="normal" title="Logout"/>
+                                <connections>
+                                    <action selector="didLogoutButton:" destination="S3D-xN-vnc" eventType="touchUpInside" id="22d-oQ-5tZ"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="XF1-fw-d2b" secondAttribute="trailing" constant="19" id="Obd-th-MkB"/>
+                            <constraint firstItem="zcT-kF-Oik" firstAttribute="top" secondItem="LZw-1z-cHR" secondAttribute="bottom" id="oLK-OH-SSS"/>
+                            <constraint firstItem="XF1-fw-d2b" firstAttribute="top" secondItem="LZw-1z-cHR" secondAttribute="bottom" id="pev-Xe-N16"/>
+                            <constraint firstItem="zcT-kF-Oik" firstAttribute="centerX" secondItem="UrV-9S-E1I" secondAttribute="centerX" id="vQd-Gi-CdP"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dca-Na-Kwh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="921" y="305"/>
         </scene>
     </scenes>
 </document>
